# FourthYearProject

./: .gitignore  README.md
Code/LLVM_PASS/: CMakeLists.txt  README.md  notes.txt
Code/LLVM_PASS/ONum/: CMakeLists.txt  globalIncludes.h
Code/LLVM_PASS/ONum/Annotation/: Annotation.cpp  Annotation.h
Code/LLVM_PASS/ONum/DependencyCounter/: DependencyCounter.cpp  DependencyCounter.h
Code/LLVM_PASS/ONum/Marker/: AggregateOperationHandlers.cpp  BinaryOperationHandlers.cpp  BitwiseBinaryOperationHandlers.cpp  ConversionOperationHandlers.cpp  Marker.cpp  Marker.h  MemoryAccessAndAddressingOperationHandlers.cpp  OtherOperationHandlers.cpp  TerminatorInstructionHandlers.cpp  VectorOperationHandlers.cpp
Code/LLVM_PASS/ONum/ONum/: ONum.cpp  ONum.h
Code/LLVM_PASS/optimi/: Annotation.cpp  Annotation.h  AnnotationStore.cpp  AnnotationStore.h  CMakeLists.txt  DependencyCounter.cpp  DependencyCounter.h  Marker.cpp  Marker.h  Marker_AggregateOperationHandlers.cpp  Marker_BinaryOperationHandlers.cpp  Marker_BitwiseBinaryOperationHandlers.cpp  Marker_ConversionOperationHandlers.cpp  Marker_OtherOperationHandlers.cpp  Marker_TerminatorInstructionHandlers.cpp  Marker_VectorOperationHandlers.cpp  Optimi.cpp  Optimi.h  Optimi.hpp  clean.sh  globalIncludes.h  plan.txt
Code/LLVM_PASS/optimi/Annotation/: Annotation.cpp  Annotation.h
Code/LLVM_PASS/optimi/DependencyCounter/: DependencyCounter.cpp  DependencyCounter.h
Code/LLVM_PASS/optimi/Marker/: BinaryOperationHandlers.cpp  Marker.cpp  Marker.h  MemoryAccessAndAddressingOperationHandlers.cpp  OtherOperationHandlers.cpp  VectorOperationHandlers.cpp
Code/LLVM_PASS/optimi/Optimi/: Optimi.h
Code/TestCode/: a.out  arrayAccess.c  build.sh  compileAll.sh  doubleFor.c  for.c  if.c  ifelse.c  largeFloatSum.c  largeSum.c  multipleAssignment.c  notes.txt  small_demo.c  something.c  switch.c  void.c  while.c
Code/TestCode/2d_shallow_water_test/: build.sh  derivedParameters.h  enumerations.h  fxp.in  host-generic.bc  host-generic.c  host-generic.h  host-generic.ll  host-sw2d-normal.c  host-sw2d-withAnnotations.ll  host-sw2d-withoutAnnotations.ll  host-sw2d.bc  host-sw2d.c  host-sw2d.h  host-sw2d.ll  host.bc  host.c  host.ll  questions.txt  temp.bc  temp.ll
Reporting/: 1-13_Oct_2016.tex  10-12_Jan_2016.tex  11-19_Jan_2017.tex  12-26_Jan_2017.tex  13-2_Feb_2017.tex  14-9_Feb_2017.tex  15-24_Feb_2017.tex  2-20_Oct_2016.tex  3-27_Oct_2016.tex  4-01_Nov_2016.tex  5-09_Nov_2016.tex  5-10_Nov_2016.tex  6-17_Nov_2016.tex  7-17_Nov_2016.tex  8-01_Dec_2016.tex  9-08_Dec_2016.tex  bibliography.bib
Results/results/: uniform_changes.txt
Results/tir-16/: sw2d_ui18.tirl  sw2d_ui32.tirl  sw2d_ui64.tirl  sw2d_uiMixed.tirl
comparison_for_report/build_sw2d_ui64/: temp.tirl
comparison_for_report/build_uiMixed/: temp.tirl
(+32 files in other folders)
